Invite notifications with sockets

--- a/csl-frontend/tsconfig.json
+++ b/csl-frontend/tsconfig.json
@@ -16,7 +16,13 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "utils/firebase.js"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "utils/firebase.js",
+    "server.js"
+  ],
   "exclude": ["node_modules"],
   "extends": "./paths.json"
 }
