--- a/csl-backend/Dockerfile
+++ b/csl-backend/Dockerfile
@@ -1,7 +1,4 @@
-FROM node AS development
-
-# Yarn
-RUN yarn install
+FROM node
 
 # Set working dir in the container to /
 WORKDIR /
@@ -11,7 +8,7 @@ COPY package.json ./
 RUN yarn install
 COPY . .
 RUN yarn run build
-# Expose port 8080 to the outside once the container has launched
+# Expose port 8081 to the outside once the container has launched
 EXPOSE 8080
 
 # what should be executed when the Docker image is launching
