--- a/csl-frontend/package.json
+++ b/csl-frontend/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^1.6.2",
     "@svgr/webpack": "^6.1.0",
     "@types/firebase": "^3.2.1",
+    "dayjs": "^1.10.7",
     "firebase": "^9.6.1",
     "graphql": "^16.2.0",
     "graphql-request": "^3.7.0",
