--- a/csl-frontend/.env.example
+++ b/csl-frontend/.env.example
@@ -1,4 +1,17 @@
 # Add the public site key here
 NEXT_PUBLIC_RECAPTCHA_SITE_KEY=
+
 # Add the api endpoint here
 NEXT_BACKEND_URL=http://localhost:8080
+# NEXT_BACKEND_URL=
+
+# Firebase 
+NEXT_APIKEY=
+NEXT_AUTHDOMAIN=
+NEXT_PROJECTID=
+NEXT_STORAGEBUCKET=
+NEXT_MESSAGINGSENDERID=
+NEXT_APPID=
+NEXT_MEASUREMENTID=
+
+PORT=3000
