--- a/csl-frontend/Dockerfile
+++ b/csl-frontend/Dockerfile
@@ -1,16 +1,11 @@
 FROM node
 
-ENV NODE_ENV development
-ENV PORT 3000
+RUN mkdir -p /client
+WORKDIR /client
 
-EXPOSE 80 443 3000
-
-RUN mkdir -p /client/src/app
-WORKDIR /client/src/app
-
-COPY package*.json /client/src/app/
+COPY package*.json /client/
 RUN yarn install
 
-COPY . /client/src/app
+COPY . /client
 
 CMD "yarn" "dev"
