--- a/csl-backend/.dockerignore
+++ b/csl-backend/.dockerignore
@@ -1,3 +1,4 @@
+dist
 .dist
 .git
 .github
@@ -5,8 +6,10 @@
 coverage
 docker-compose.yml
 README.md
+db-data
 
 # Node Files #
 node_modules
 npm-debug.log
 npm-debug.log.*
+
