--- a/csl-backend/package.json
+++ b/csl-backend/package.json
@@ -36,28 +36,32 @@
     "apollo-server-express": "^3.3.0",
     "bcryptjs": "^2.4.3",
     "cache-manager": "^3.4.4",
-    "class-transformer": "^0.4.0",
-    "class-validator": "^0.13.1",
     "compression": "^1.7.4",
     "dotenv": "^10.0.0",
     "express-rate-limit": "^5.3.0",
     "graphql": "^15.5.3",
     "graphql-tools": "^8.2.0",
     "helmet": "^4.6.0",
+    "lodash": "^4.17.21",
     "lusca": "^1.7.0",
     "luxon": "^2.2.0",
+    "morgan": "^1.10.0",
     "mysql2": "^2.3.0",
+    "nestjs-redis": "^1.3.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-steam": "^1.0.17",
     "pg": "^8.7.1",
+    "redis": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "socket.io": "^4.4.0",
+    "socket.io-redis": "^6.1.1",
     "sqlite3": "^5.0.2",
-    "typeorm": "^0.2.37"
+    "typeorm": "^0.2.37",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
@@ -65,10 +69,14 @@
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
+    "@types/lodash": "^4.14.178",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.11",
+    "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "eslint": "^7.30.0",
