--- a/csl-backend/package.json
+++ b/csl-backend/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/ioredis": "^1.0.0",
     "@nestjs/axios": "^0.0.3",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.5",
@@ -36,6 +37,8 @@
     "apollo-server-express": "^3.3.0",
     "bcryptjs": "^2.4.3",
     "cache-manager": "^3.4.4",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "compression": "^1.7.4",
     "dotenv": "^10.0.0",
     "express-rate-limit": "^5.3.0",
@@ -46,20 +49,16 @@
     "lusca": "^1.7.0",
     "luxon": "^2.2.0",
     "morgan": "^1.10.0",
-    "mysql2": "^2.3.0",
     "nestjs-redis": "^1.3.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-steam": "^1.0.17",
     "pg": "^8.7.1",
-    "redis": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "socket.io": "^4.4.0",
-    "socket.io-redis": "^6.1.1",
-    "sqlite3": "^5.0.2",
     "typeorm": "^0.2.37",
     "uuid": "^8.3.2"
   },
