--- a/csl-frontend/package.json
+++ b/csl-frontend/package.json
@@ -47,6 +47,6 @@
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^7.0.1",
     "sass-loader": "^12.3.0",
-    "typescript": "4.5.2"
+    "typescript": "^4.5.4"
   }
 }
